--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
+  "description": "OSINT Browser Backend Server",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,19 +18,22 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "got": "^11.8.6",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
-    "user-agents": "^1.1.93"
+    "user-agents": "^1.1.93",
+    "whois": "^2.14.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/got": "^9.6.12",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.5",
-    "@types/node-cache": "^4.2.5",
-    "@types/user-agents": "^1.0.4",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
